--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,23 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "LuNA Classification Testing",
+            "consoleTitle": "LuNA Classification Testing",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceRoot}/luna16/cli.py",
+            "console": "integratedTerminal",
+            "env": {
+                "PYTHONPATH": "."
+            },
+            "args": [
+                "train_luna_classification",
+                "--epochs=2",
+                "--batch-size=2",
+                "--training-length=2",
+            ]
+        },
+        {
             "name": "LuNA Classification Training",
             "consoleTitle": "LuNA Classification Training",
             "type": "debugpy",
@@ -16,9 +33,9 @@
             },
             "args": [
                 "train_luna_classification",
+                "--epochs=10",
                 "--batch-size=64",
-                "--epochs=1",
-                "--training-length=10",
+                "--training-length=100",
             ]
         },
         {
@@ -34,8 +51,8 @@
             "args": [
                 "train_luna_malignant_classification",
                 "classification_2024-06-19T13:41:33.836578.best.state",
-                "--batch-size=64",
                 "--epochs=10",
+                "--batch-size=64",
                 "--training-length=10",
             ]
         },
@@ -51,10 +68,9 @@
             },
             "args": [
                 "train_luna_segmentation",
-                "--batch-size=5",
                 "--epochs=2",
+                "--batch-size=5",
                 "--training-length=10",
-                // "--validation-stride=1",
             ]
         },
         {
