feat: add profiling to trainer

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,23 +22,6 @@
             ]
         },
         {
-            "name": "Profiling LuNA Classification Testing",
-            "consoleTitle": "Profiling LuNA Classification Testing",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${workspaceRoot}/luna16/cli.py",
-            "console": "integratedTerminal",
-            "env": {
-                "PYTHONPATH": "."
-            },
-            "args": [
-                "profile_luna_classification",
-                "--epochs=1",
-                "--batch-size=2",
-                "--training-length=2",
-            ]
-        },
-        {
             "name": "LuNA Classification Training",
             "consoleTitle": "LuNA Classification Training",
             "type": "debugpy",
@@ -53,6 +36,24 @@
                 "--epochs=10",
                 "--batch-size=64",
                 "--training-length=100",
+            ]
+        },
+        {
+            "name": "Profiling LuNA Classification",
+            "consoleTitle": "Profiling LuNA Classification",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceRoot}/luna16/cli.py",
+            "console": "integratedTerminal",
+            "env": {
+                "PYTHONPATH": "."
+            },
+            "args": [
+                "train_luna_classification",
+                "--epochs=10",
+                "--batch-size=2",
+                "--training-length=2",
+                "--profile",
             ]
         },
         {
