--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "cache3>=0.4.3",
     "diskcache>=5.6.3",
     "graphviz>=0.20.3",
     "h5py>=3.11.0",
@@ -16,6 +17,7 @@ dependencies = [
     "pandas>=2.2.3",
     "pillow>=10.4.0",
     "plotly>=5.24.1",
+    "profilehooks>=1.13.0",
     "pydantic-settings>=2.5.2",
     "pydantic>=2.9.2",
     "pynvml>=11.5.3",
@@ -23,6 +25,7 @@ dependencies = [
     "scikit-learn>=1.5.2",
     "scipy>=1.14.1",
     "simpleitk>=2.4.0",
+    "snakeviz>=2.2.0",
     "tensorboard>=2.18.0",
     "torch>=2.4.1",
     "torchaudio>=2.4.1",
