feat: add ct cutouts generator

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,5 +39,5 @@
     ],
     "python.testing.pytestEnabled": true,
     "python.testing.unittestEnabled": false,
-    "ruff.lint.run": "onType"
+    "ruff.lint.run": "onType",
 }
