--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,34 +5,32 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "cache3>=0.4.3",
-    "diskcache>=5.6.3",
-    "graphviz>=0.20.3",
-    "h5py>=3.11.0",
-    "ipympl>=0.9.4",
-    "jupyter>=1.1.1",
-    "matplotlib>=3.9.2",
-    "mlflow>=2.16.2",
-    "numpy>=2.1.1",
-    "pandas>=2.2.3",
-    "pillow>=10.4.0",
-    "plotly>=5.24.1",
-    "profilehooks>=1.13.0",
-    "pydantic-settings>=2.5.2",
-    "pydantic>=2.9.2",
-    "pynvml>=11.5.3",
-    "ray[tune]>=2.37.0",
-    "scikit-learn>=1.5.2",
-    "scipy>=1.14.1",
-    "simpleitk>=2.4.0",
-    "snakeviz>=2.2.0",
-    "tensorboard>=2.18.0",
-    "torch>=2.4.1",
-    "torchaudio>=2.4.1",
-    "torchinfo>=1.8.0",
-    "torchvision>=0.19.1",
-    "tqdm>=4.66.5",
-    "typer>=0.12.5",
+  "graphviz>=0.20.3",
+  "h5py>=3.11.0",
+  "ipympl>=0.9.4",
+  "jupyter>=1.1.1",
+  "matplotlib>=3.9.2",
+  "mlflow>=2.16.2",
+  "numpy>=2.1.1",
+  "pandas>=2.2.3",
+  "pillow>=10.4.0",
+  "plotly>=5.24.1",
+  "profilehooks>=1.13.0",
+  "pydantic-settings>=2.5.2",
+  "pydantic>=2.9.2",
+  "pynvml>=11.5.3",
+  "ray[tune]>=2.37.0",
+  "scikit-learn>=1.5.2",
+  "scipy>=1.14.1",
+  "simpleitk>=2.4.0",
+  "snakeviz>=2.2.0",
+  "tensorboard>=2.18.0",
+  "torch>=2.4.1",
+  "torchaudio>=2.4.1",
+  "torchinfo>=1.8.0",
+  "torchvision>=0.19.1",
+  "tqdm>=4.66.5",
+  "typer>=0.12.5",
 ]
 
 #########################################
@@ -85,13 +83,13 @@ select = [
   "E", # pycodestyle
   "F", # Pyflakes
   # Custom rules
-  "W",   # pycodestyle warnings
-  "C",   # McCabe complexity
-  "B",   # flake8-bugbear
-  "I",   # isort
-  "UP",  # pyupgrade
-  "YTT", # flake8-2020
-  "RUF", # Ruff-specific rules
+  "W",    # pycodestyle warnings
+  "C",    # McCabe complexity
+  "B",    # flake8-bugbear
+  "I",    # isort
+  "UP",   # pyupgrade
+  "YTT",  # flake8-2020
+  "RUF",  # Ruff-specific rules
   "NPY",
   "FURB",
   "PERF",
@@ -142,10 +140,7 @@ docstring-code-line-length = "dynamic"
 #########################
 
 [tool.pyright]
-exclude = [
-  "**/__pycache__",
-  ".venv",
-]
+exclude = ["**/__pycache__", ".venv"]
 
 typeCheckingMode = "strict"
 
