feat: load models using mlflow

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,9 +17,8 @@
             "args": [
                 "train_luna_classification",
                 "0.0.0-test",
-                "--epochs=2",
-                "--batch-size=32",
-                "--profile",
+                "--epochs=1",
+                "--batch-size=128",
             ],
             "justMyCode": false
         },
@@ -38,7 +37,8 @@
                 "0.0.1",
                 "--epochs=5",
                 "--batch-size=256",
-            ]
+            ],
+            "justMyCode": false,
         },
         {
             "name": "Continue LuNA Classification Training",
@@ -57,7 +57,8 @@
                 "0.0.0",
                 "--epochs=5",
                 "--batch-size=256",
-            ]
+            ],
+            "justMyCode": false,
         },
         {
             "name": "Profiling LuNA Classification",
@@ -75,7 +76,8 @@
                 "--epochs=5",
                 "--batch-size=256",
                 "--profile",
-            ]
+            ],
+            "justMyCode": false,
         },
         {
             "name": "LuNA Malignant Classification Training",
@@ -92,7 +94,8 @@
                 "0.0.1",
                 "--epochs=5",
                 "--batch-size=256",
-            ]
+            ],
+            "justMyCode": false,
         },
         {
             "name": "Continue LuNA Malignant Classification Training",
@@ -107,11 +110,12 @@
             "args": [
                 "load_train_luna_malignant_classification",
                 "0.0.1",
-                "classification",
-                "0.0.0",
+                "Classification",
+                "7",
                 "--epochs=5",
                 "--batch-size=256",
-            ]
+            ],
+            "justMyCode": false,
         },
         {
             "name": "Profiling LuNA Malignant Classification Training",
@@ -129,7 +133,8 @@
                 "--epochs=10",
                 "--batch-size=256",
                 "--profile",
-            ]
+            ],
+            "justMyCode": false,
         },
         {
             "name": "PyTest",
@@ -137,7 +142,6 @@
             "type": "debugpy",
             "request": "launch",
             "module": "pytest",
-            "justMyCode": false,
             "console": "integratedTerminal",
             "env": {
                 "PYTHONPATH": "."
@@ -150,7 +154,8 @@
                 // "-k test_offset",
                 // "-k test_scale",
                 // "-k test_rotate",
-            ]
+            ],
+            "justMyCode": false,
         },
         {
             "name": "Create Cutouts",
