--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,16 @@ dependencies = [
   "typer>=0.12.5",
 ]
 
+
+[tool.uv]
+dev-dependencies = [
+  "coverage>=7.6.3",
+  "pre-commit>=4.0.1",
+  "pytest>=8.3.3",
+  "ruff>=0.6.9",
+]
+
+
 #########################################
 # Linting and Formatting Configurations #
 #########################################
