refactor: naming changes and docs template

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ NUMEXPR_MAX_THREADS=10
 LOGGING_LEVEL=INFO
 PYTHONPATH=.
 ML_FLOW_URL=sqlite:///mlruns.db
+NUM_WORKERS=2
+PRESENT_CANDIDATES_FILE=present_candidates.csv
+LOG_EVERY_N_EXAMPLES=1000
+DATA_DOWNLOADED_DIR=data_downloaded/ct_scan_subsets
