--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,8 @@ dependencies = [
   "simpleitk>=2.4.0",
   "snakeviz>=2.2.0",
   "tensorboard>=2.18.0",
-  "torch>=2.4.1",
   "torchaudio>=2.4.1",
   "torchinfo>=1.8.0",
-  "torchvision>=0.19.1",
   "tqdm>=4.66.5",
   "typer>=0.12.5",
 ]
@@ -40,12 +38,27 @@ dev-dependencies = [
   "pytest>=8.3.3",
   "ruff>=0.6.9",
 ]
+conflicts = [[{ extra = "cpu" }, { extra = "cu124" }]]
+
+[project.optional-dependencies]
+cpu = ["torch>=2.6.0", "torchvision>=0.21.0"]
+cu124 = ["torch>=2.6.0", "torchvision>=0.21.0"]
+
 
 [tool.uv.sources]
-torch = [{ index = "pytorch-cu124", marker = "platform_system == 'Linux'" }]
-torchvision = [
-  { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
+torch = [
+  { index = "pytorch-cpu", extra = "cpu" },
+  { index = "pytorch-cu124", extra = "cu124" },
 ]
+torchvision = [
+  { index = "pytorch-cpu", extra = "cpu" },
+  { index = "pytorch-cu124", extra = "cu124" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
 
 [[tool.uv.index]]
 name = "pytorch-cu124"
